feat: adding setup script

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -48,6 +48,7 @@ tasks:
     cmds:
       - docker-compose exec ollama ollama pull llama3
       - docker-compose exec ollama ollama pull mistral
+      - docker-compose exec ollama ollama pull deepseek-r1
 
   clean:
     desc: Remove all containers and volumes
