--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,7 +1,19 @@
 version: "3"
 
+silent: true
+
 dotenv:
   - .env
+
+env:
+  DOCKER_COMMAND: docker # here you can set "podman", for example
+  COMPOSE_MAIN_SERVICE: n8n
+
+includes:
+  main:
+    taskfile: ./.taskfiles/docker.Taskfile.yml
+    flatten: true
+    dir: "{{.USER_WORKING_DIR}}"
 
 tasks:
   setup:
@@ -9,55 +21,65 @@ tasks:
       - task: pull-models
       - task: setup-env
 
-  start:
-    desc: Start all services
-    aliases:
-      - up
-      - run
-    cmds:
-      - docker-compose up -d
-      - echo "Services started! Access n8n at http://localhost:5678"
-
-  stop:
-    desc: Stop all services
-    cmds:
-      - docker-compose down
-
-  restart:
-    desc: Restart all services
-    cmds:
-      - docker-compose restart
-
-  logs:
-    desc: Show logs from all services
-    cmds:
-      - docker-compose logs -f
-
-  n8n-logs:
-    desc: Show logs from n8n service
-    cmds:
-      - docker-compose logs -f n8n
-
-  ollama-logs:
-    desc: Show logs from ollama service
-    cmds:
-      - docker-compose logs -f ollama
-
-  pull-models:
-    desc: Pull recommended LLM models for Ollama
-    cmds:
-      - docker-compose exec ollama ollama pull llama3
-      - docker-compose exec ollama ollama pull mistral
-      - docker-compose exec ollama ollama pull deepseek-r1
-
-  clean:
-    desc: Remove all containers and volumes
-    cmds:
-      - docker-compose down -v
-      - echo "All containers and volumes removed"
-
   setup-env:
     desc: Create .env file from example
     cmds:
       - cp .env.example .env
       - echo ".env file created from example"
+
+  pull-models:
+    desc: Pull recommended LLM models for Ollama
+    cmds:
+      - docker compose exec ollama ollama pull deepseek-r1
+
+  # start:
+  #   desc: Start all services
+  #   aliases:
+  #     - up
+  #     - run
+  #   cmds:
+  #     - docker-compose up -d
+  #     - "echo \"\n\""
+  #     - echo "Services started! 🚀"
+  #     - "echo \"\n\""
+  #     - 'echo "🌐 Access n8n at: http://localhost:5678"'
+  #     - 'echo "🌐 Access Open WebUI at: http://localhost:3000"'
+  #     - 'echo "🌐 Access QDrant Dashboard at: http://localhost:6333/dashboard"'
+
+  # stop:
+  #   desc: Stop all services
+  #   cmds:
+  #     - docker-compose down
+
+  # restart:
+  #   desc: Restart all services
+  #   cmds:
+  #     - docker-compose restart
+
+  # logs:
+  #   desc: Show logs from all services
+  #   cmds:
+  #     - docker-compose logs -f
+
+  # logs:n8n:
+  #   desc: Show logs from n8n service
+  #   cmds:
+  #     - task: logs
+  #       vars:
+  #         CLI_ARGS: SERVICE=n8n
+
+  # ollama-logs:
+  #   desc: Show logs from ollama service
+  #   cmds:
+  #     - docker compose logs -f ollama
+
+  # clean:
+  #   desc: Remove all containers and volumes
+  #   cmds:
+  #     - docker compose down -v
+  #     - echo "All containers and volumes removed"
+
+  clean:data:
+    desc: Remove service's data
+    cmds:
+      - rm -rf ./services/**/data/**
