fix: pull models depends on running ollama container

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -29,6 +29,8 @@ tasks:
 
   pull-models:
     desc: Pull recommended LLM models for Ollama
+    deps:
+      - up
     cmds:
       - docker compose exec ollama ollama pull deepseek-r1
 
