--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,6 +4,20 @@ pre-commit:
     lint:prettier:fix:
       glob: "*.{json,jsonc,yaml,yml,md}"
       run: task lint:prettier:fix
+      stage_fixed: true
     lint:markdown:fix:
       glob: "*.md"
       run: task lint:markdown:fix
+      stage_fixed: true
+
+# pre-push
+pre-push:
+  commands:
+    lint:prettier:check:
+      glob: "*.{json,jsonc,yaml,yml,md}"
+      run: task lint:prettier:check
+      stage_fixed: true
+    lint:markdown:check:
+      glob: "*.md"
+      run: task lint:markdown:check
+      stage_fixed: true
